src/test/ui/suggestions/unused-closure-argument.stderr
error: unused variable: `x`
  --> $DIR/unused-closure-argument.rs:12:23
   |
LL |         .map(|Point { x, y }| y)
   |                       ^ help: try ignoring the field: `x: _`
   |
note: lint level defined here
  --> $DIR/unused-closure-argument.rs:1:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: unused variable: `x`
  --> $DIR/unused-closure-argument.rs:17:15
   |
LL |         .map(|x| 4)
   |               ^ help: consider prefixing with an underscore: `_x`

error: aborting due to 2 previous errors

